track_controller/old_plc/grammar.txt
#TODO: update

statements      : NEWLINE* expr (NEWLINE+ expr)* NEWLINE*

expr            : KEYWORD:VAR IDENTIFIER EQ expr
                : term ((AND|OR|XOR) term)*

term            : factor ((EE|NE) factor)*

factor          : NOT factor
                : call

call            : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom            : TRUE|FALSE|IDENTIFIER
                : LPAREN expr RPAREN
                : if-expr
                : while-expr
                : func-def

if-expr         : KEYWORD:IF expr KEYWORD:THEN
                  (expr if-expr-b|if-expr-c?)
                | (NEWLINE statements KEYWORD:END|if-expr-b|if-expr-c)

if-expr -b      : KEYWORD:ELIF expr KEYWORD:THEN
                  (expr if-expr-b|if-expr-c?)
                | (NEWLINE statements KEYWORD:END|if-expr-b|if-expr-c)

if-expr-c       : KEYWORD:ELSE
                  expr
                | (NEWLINE statements KEYWORD:END)

while-expr      : KEYWORD:WHILE expr KEYWORD:THEN
                  expr
                | (NEWLINE statements KEYWORD:END)

func-def        : KEYWORD:FUNC IDENTIFIER?
                  LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
                  (ARROW expr)
                | (NEWLINE statements KEYWORD:END)
